fixed the label so text wrap is now handled by css class, not inline style.

--- a/src/main/resources/META-INF/resources/ibx/resources/css/label.ibx.css
+++ b/src/main/resources/META-INF/resources/ibx/resources/css/label.ibx.css
@@ -18,6 +18,12 @@
 	cursor:inherit;
 }
 
+.ibx-label-text.ibx-label-text-wrap
+{
+	flex:0 1 auto;
+}
+
+
 .ibx-label-glyph
 {
 	font-size:inherit; /*because material-icons defines a default font size as 24px.*/
